Possible memory allocation problem while rendering #49027

Closed
opened 2016-08-06 09:30:39 +02:00 by Tomasz Wota · 6 comments

System Information
Windows 8 Pro 64bit, AMD FX8350, Nvidia GTX660, 16GB DDR3 RAM

Blender Version
Broken: 2.77 and 2.77a

Short description of error
When rendering 33 minutes worth of 1080p video material with ~150 soft cuts, memory usage constantly rises. Every time the rendered frame marker reaches soft cut - around 80MB gets allocated, then the memory usage hovers around roughly the same level until the next soft cut at which point another ~80MB is allocated. This means that soon enough I get Windows complaining about not enough memory, and with around 12GB of RAM used by Blender - it crashes without even a popup, Just disappears.
I saw it crash even with around 2 GB of RAM still available. I use "Keep UI" option, so the preview window is not engaged when rendering.

Is that kind of behavior in any way normal?

Exact steps for others to reproduce the error
I could upload my .blend file, but it's really just three ~10min/1080p clips that were cut and reordered using ~150 soft cuts. Previewing also allocates a lot of memory, but if I leave Blender idle for a while - it will get deallocated. When I render it only seems to allocate more and more, which is why I suspect there may be a leak somewhere or at least a problem with not releasing memory at an appropriate time.

Workaround
Rendering in shorter parts. Which works, but that's a poor solution.

**System Information** Windows 8 Pro 64bit, AMD FX8350, Nvidia GTX660, 16GB DDR3 RAM **Blender Version** Broken: 2.77 and 2.77a **Short description of error** When rendering 33 minutes worth of 1080p video material with ~150 soft cuts, memory usage constantly rises. Every time the rendered frame marker reaches soft cut - around 80MB gets allocated, then the memory usage hovers around roughly the same level until the next soft cut at which point another ~80MB is allocated. This means that soon enough I get Windows complaining about not enough memory, and with around 12GB of RAM used by Blender - it crashes without even a popup, Just disappears. I saw it crash even with around 2 GB of RAM still available. I use "Keep UI" option, so the preview window is not engaged when rendering. Is that kind of behavior in any way normal? **Exact steps for others to reproduce the error** I could upload my .blend file, but it's really just three ~10min/1080p clips that were cut and reordered using ~150 soft cuts. Previewing also allocates a lot of memory, but if I leave Blender idle for a while - it will get deallocated. When I render it only seems to allocate more and more, which is why I suspect there may be a leak somewhere or at least a problem with not releasing memory at an appropriate time. **Workaround** Rendering in shorter parts. Which works, but that's a poor solution.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Xupicor

Added subscriber: @Xupicor

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2016-08-09 12:07:29 +02:00

The memory is coming from the the internal buffers held by FFmpeg descriptors: and each of the strips will have own FFmpeg descriptor. Rest of the buffers in sequencer are limited by the case size. Ideally the FFmpeg descriptors should be covered by the same cache system, but it's quite tricky since it's not possible to know their exact size in memory.

I'll try to make similar cleanup function which closes all inactive FFmpeg descriptors when doing animation rendering. That will match behavior of image sequencer when rendering. Doing that will at least make it possible to render the whole sequence.

The memory is coming from the the internal buffers held by FFmpeg descriptors: and each of the strips will have own FFmpeg descriptor. Rest of the buffers in sequencer are limited by the case size. Ideally the FFmpeg descriptors should be covered by the same cache system, but it's quite tricky since it's not possible to know their exact size in memory. I'll try to make similar cleanup function which closes all inactive FFmpeg descriptors when doing animation rendering. That will match behavior of image sequencer when rendering. Doing that will at least make it possible to render the whole sequence.

This issue was referenced by 1647d89cf1

This issue was referenced by 1647d89cf14b0286043b5d54398ecde8e132d042

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49027
No description provided.